--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,6 @@
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "outDir": "dist"
 }
